# emberlocalai

./: .gitignore  ANEFORGE.md  Cargo.toml  LICENSE  README.md  ROADMAP_ANE.md  STATUS.md  ane-mlx-hybrid.html  ember.docx  ember2.docx  netlify.toml  pyproject.toml
.claude/: launch.json
app/ANEForge/: DEPLOY.md  Ember.entitlements  Info.plist  Package.swift  README.md  build_app.sh  install.sh  make_dmg.sh  make_icon.swift  preflight.sh  run.sh  sign_and_notarize.sh
app/ANEForge/Resources/de.lproj/: Localizable.strings
app/ANEForge/Resources/en.lproj/: Localizable.strings
app/ANEForge/Resources/es.lproj/: Localizable.strings
app/ANEForge/Resources/fr.lproj/: Localizable.strings
app/ANEForge/Resources/ja.lproj/: Localizable.strings
app/ANEForge/Resources/pt.lproj/: Localizable.strings
app/ANEForge/Resources/zh-Hans.lproj/: Localizable.strings
app/ANEForge/Sources/ANEForge/: ANEForgeApp.swift  AgentBar.swift  AppState.swift  ContentView.swift  DesignData.swift  (+12 more)
crates/ane-core/: Cargo.toml  build.rs
crates/ane-core/src/: backward.rs  blas.rs  checkpoint.rs  data.rs  forward.rs  lib.rs  lora.rs  mil.rs  model.rs  optimizer.rs  process.rs  scheduler.rs
crates/ane-core/src/kernels/: attention.rs  ffn.rs  lora_kernels.rs  norm.rs
crates/ane-python/: Cargo.toml
crates/ane-python/src/: lib.rs
crates/ane-sys/: Cargo.toml  build.rs
crates/ane-sys/objc/: ane_bridge.m
crates/ane-sys/src/: compiler.rs  detect.rs  lib.rs  runtime.rs  surface.rs
crates/ane-sys/tests/: ane_smoke.rs
crates/ane-sys/verify/: README.md  ane_matmul.m  ane_model.py  ane_run.m  ane_verify.m  coreml_run  coreml_run.m  gen_matmul.py
docs/:  bis CAHIER-DES-CHARGES.md  CAHIER-DES-CHARGES.md
models/: gemma.toml  llama.toml  phi.toml  qwen.toml  smollm2.toml
python/aneforge/: __init__.py  agent.py  ane_export.py  ane_infer.py  ane_kernel.py  chat.py  cli.py  config.py  data.py  ember_daemon.py  export.py  memory.py  mlx_backend.py  mlx_chat.py  model.py  monitor.py  personal.py  trainer.py  tts.py  weights.py
site/: index.html
tests/python/: conftest.py  test_chat.py  test_config.py  test_data.py  test_e2e.py  test_export.py  test_memory.py  test_model.py  test_native.py  test_personal.py  test_trainer.py
