[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "aneforge"
version = "0.1.0"
description = "Democratizing AI fine-tuning on Apple Neural Engine"
license = { text = "MIT" }
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "huggingface-hub>=0.20",
    "tokenizers>=0.20",
    "safetensors>=0.4",
    "numpy>=1.24",
    "rich>=13.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "maturin>=1.7"]
mlx = ["mlx>=0.10", "mlx-lm>=0.10"]

[project.scripts]
aneforge = "aneforge.cli:main"

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "crates/ane-python/Cargo.toml"
python-source = "python"
module-name = "aneforge._core"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
